--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -7,6 +7,7 @@
     text-transform: uppercase;
     font-size: 12px;
     font-weight: bold;
+    font-family: "Gotham Rounded Bold";
 }
 
 .button:hover {
