--- a/src/components/Header/navItems/navItems.css
+++ b/src/components/Header/navItems/navItems.css
@@ -15,7 +15,7 @@
     font-weight: bold;
     text-align: center;
     cursor: pointer;
-    
+    letter-spacing: 2px;
 }
 
 @media (max-width: 500px) {
@@ -26,6 +26,7 @@
 
     .li {
         margin: 5px;
+        
     }
 
     .img {
