--- a/src/components/section2/section2.css
+++ b/src/components/section2/section2.css
@@ -1,21 +1,50 @@
 .Section {
-  display: flex;
+    background-color: #f5f6f7;
+    display: flex;
+    flex-direction: column;
+    padding: 70px 0;
+    position: relative;
 }
 
 .gallery {
     display: flex;
-    align-content: space-around;
+    justify-content: space-around;
     flex-wrap: wrap;
-    max-width: 1000px;
 }
 
 .text {
     text-align:center;
-    max-width: 40%;
-    
+}
+
+.image {
+    margin: 0 5px;
+    padding: 0 5px;
 }
 
 .icons {
-    
+    position: absolute;
+    right: 50px;
+    top: 20px;
 }
 
+.header {
+    font-family: "Gotham Rounded Bold";
+}
+
+.para {
+    font-family: "Gotham Rounded Medium";
+}
+
+@media (max-width: 600px) {
+    .icons {
+        right: 25px;
+        top: 200px;
+    }
+}
+
+@media (max-width: 400px) {
+    .icons {
+        right: 0;
+        top: 200px;
+    }
+}
